[package]
name = "td_foo"
version = "0.1.0"
authors = ["Cory Johnson <cory1993johnson@gmail.com>"]
repository = "https://github.com/corman44/td_foo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bevy = {version = "0.12", features = [
  "animation",
  "bevy_asset",
  "bevy_gilrs",
  "bevy_scene",
  "bevy_winit",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_gltf",
  "bevy_render",
  "bevy_sprite",
  "bevy_text",
  "bevy_ui",
  "multi-threaded",
  "png",
  "hdr",
  "vorbis",
  "x11",
  "bevy_gizmos",
  "android_shared_stdcxx",
  "tonemapping_luts",
  "default_font",
  "webgl2",
]}
bevy_ecs_ldtk = "0.9"
# bevy_ecs_tilemap = "0.12"
bevy_kira_audio = "0.18.0"
bevy_asset_loader = { version = "0.19" }
serde = { version = "1", features = ["derive"] }
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
